--- a/less/styles.less
+++ b/less/styles.less
@@ -1,4 +1,32 @@
+// Font
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+* {
+    font-family: 'Open Sans', sans-serif;
+}
+
+// Variables
 @primary-color: #2f91eb;
 @secondary-color: #f29148;
 @nav-footer-color: #141c25;
 @bg-color: #ffffff;
+
+// Navbar 
+.navbar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: @nav-footer-color;
+    padding: 20px 20px;
+
+    img {
+        width: 90px;
+    }
+
+    a {
+        color: #fff;
+        text-decoration: none;
+        margin-left: 10px;
+    }
+}
