--- a/css/styles.css
+++ b/css/styles.css
@@ -19,30 +19,60 @@ body {
   background-color: #141c25;
   padding: 20px 0;
 }
+@media (max-width: 700px) {
+  .navbar {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
 .navbar img {
   width: 90px;
   margin-left: 100px;
   margin-right: 0px;
 }
+@media (max-width: 700px) {
+  .navbar img {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
 .navbar nav {
   margin-left: 0px;
   margin-right: 100px;
+}
+@media (max-width: 700px) {
+  .navbar nav {
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 30px;
+  }
 }
 .navbar a {
   color: #fff;
   text-decoration: none;
   margin-left: 30px;
 }
+@media (max-width: 700px) {
+  .navbar a {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+}
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  line-height: 1.6;
   margin-left: 100px;
   margin-right: 100px;
 }
 .container .heading {
   text-align: center;
   margin-top: 50px;
+}
+.container .heading h1 {
+  font-size: 2.5rem;
 }
 .container .card-container {
   display: flex;
@@ -53,6 +83,16 @@ body {
 .container .card {
   width: 30%;
   margin: 50px 0;
+}
+@media (max-width: 900px) {
+  .container .card {
+    width: 45%;
+  }
+}
+@media (max-width: 700px) {
+  .container .card {
+    width: 100%;
+  }
 }
 .container .card img {
   width: 100%;
