--- a/less/styles.less
+++ b/less/styles.less
@@ -13,8 +13,11 @@ body {
 @primary-color: #2f91eb;
 @secondary-color: #f29148;
 @nav-footer-color: #141c25;
-@nav-footer-padding: 20px 0; // Mixin 
+@nav-footer-padding: 20px 0;
+@md-laptop: ~"(max-width: 900px)";
+@mobile: ~"(max-width: 700px)";
 
+// Mixin 
 .overall-container(@ml, @mr) {
     margin-left: @ml;
     margin-right: @mr;
@@ -29,19 +32,39 @@ body {
     background-color: @nav-footer-color;
     padding: @nav-footer-padding;
 
+    @media @mobile {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
     img {
         width: 90px;
         .overall-container(100px, 0px);
+
+        @media @mobile {
+            .overall-container(0, 0)
+        }
     }
 
     nav {
         .overall-container(0px, 100px);
+
+        @media @mobile {
+            .overall-container(0, 0);
+            margin-top: 30px;
+        }
     }
 
     a {
         color: #fff;
         text-decoration: none;
         margin-left: 30px;
+
+        @media @mobile {
+            margin-left: 30px;
+            margin-right: 30px;
+        }
     }
 }
 
@@ -50,11 +73,16 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    line-height: 1.6;
     .overall-container(100px, 100px);
 
     .heading {
         text-align: center;
         margin-top: 50px;
+
+        h1 {
+            font-size: 2.5rem;
+        }
     }
 
     .card-container {
@@ -67,6 +95,14 @@ body {
     .card {
         width: 30%;
         margin: 50px 0;
+
+        @media @md-laptop {
+            width: 45%;
+        }
+
+        @media @mobile {
+            width: 100%;
+        }
 
         img {
             width: 100%;
