--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
   background-color: #141c25;
   padding: 20px 0;
 }
-@media (max-width: 700px) {
+@media (max-width: 900px) {
   .navbar {
     flex-direction: column;
     justify-content: center;
@@ -31,7 +31,7 @@ body {
   margin-left: 100px;
   margin-right: 0px;
 }
-@media (max-width: 700px) {
+@media (max-width: 900px) {
   .navbar img {
     margin-left: 0;
     margin-right: 0;
@@ -41,7 +41,7 @@ body {
   margin-left: 0px;
   margin-right: 100px;
 }
-@media (max-width: 700px) {
+@media (max-width: 900px) {
   .navbar nav {
     margin-left: 0;
     margin-right: 0;
@@ -53,10 +53,16 @@ body {
   text-decoration: none;
   margin-left: 30px;
 }
-@media (max-width: 700px) {
+@media (max-width: 900px) {
   .navbar a {
     margin-left: 30px;
     margin-right: 30px;
+  }
+}
+@media (max-width: 700px) {
+  .navbar a {
+    margin-left: 10px;
+    margin-right: 10px;
   }
 }
 .container {
