--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,14 @@
+body,
+html {
+  heigh: 100%;
+  margin: 0;
+  color: #fff;
+}
+body {
+  background: url('../img/wave.svg') no-repeat;
+  background-size: cover;
+  padding-bottom: 500px;
+}
 .nav-div img {
   width: 15%;
   margin-right: 70%;
@@ -9,6 +20,7 @@
   font-size: 1.6rem;
   list-style-type: none;
   display: flex;
+  align-items: center;
 }
 .nav-div .navbar .nav-links li {
   margin-right: auto;
@@ -16,7 +28,11 @@
 .nav-div .navbar a {
   text-decoration: none;
   color: black;
+  justify-content: center;
 }
 .nav-div .navbar a:hover {
   color: white;
+}
+.wave-container {
+  height: 100%;
 }
