--- a/less/navigation.less
+++ b/less/navigation.less
@@ -15,7 +15,7 @@
                 font-size: 1.6rem;
                 list-style-type: none; 
                 display: flex;
-
+                align-items: center;    
                 li{
                     margin-right: auto;
                 }
@@ -23,6 +23,7 @@
             a{
                 text-decoration: none;
                 color: black;
+                justify-content: center;
                 
                 &:hover{
                     color: white;
