more styling added

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,8 +2,45 @@
 
 //header
 
-.wave-container{
-   
- 
- height: 100%;
+header{
+    color: #fff;
+    h1{
+text-align: center;
+padding-top: 5%;
+
+    }
+
+    p{
+        text-align: center;
+      
+    }
+    button{
+        margin-left:auto;
+        margin-right:auto;
+        display: block;
+    }
+}
+
+body{
+
+    .middle-picture{
+        display: flex;
+        justify-content: center;
+        height:70%;
+        padding-top: 5%;
+    }
+}
+
+.middle-content{
+display: flex;
+justify-content: space-between;
+margin-top: 5%;
+.mid-right{
+margin-right: 2%;
+}
+.mid-left{
+    align-items: center;
+    margin-left: 20%;
+}
+
 }
