--- a/less/navigation.less
+++ b/less/navigation.less
@@ -22,11 +22,11 @@
             }
             a{
                 text-decoration: none;
-                color: black;
+                color: #fff;
                 justify-content: center;
                 
                 &:hover{
-                    color: white;
+                    color: @main-orange;
                 }
             }
             
