--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,13 @@
 body,
 html {
-  heigh: 100%;
+  height: 100%;
   margin: 0;
-  color: #fff;
 }
 body {
   background: url('../img/wave.svg') no-repeat;
   background-size: cover;
   padding-bottom: 500px;
+  background-size: 200%;
 }
 .nav-div img {
   width: 15%;
@@ -27,12 +27,42 @@ body {
 }
 .nav-div .navbar a {
   text-decoration: none;
-  color: black;
+  color: #fff;
   justify-content: center;
 }
 .nav-div .navbar a:hover {
-  color: white;
+  color: #f29148;
 }
-.wave-container {
-  height: 100%;
+header {
+  color: #fff;
+}
+header h1 {
+  text-align: center;
+  padding-top: 5%;
+}
+header p {
+  text-align: center;
+}
+header button {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+body .middle-picture {
+  display: flex;
+  justify-content: center;
+  height: 70%;
+  padding-top: 5%;
+}
+.middle-content {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5%;
+}
+.middle-content .mid-right {
+  margin-right: 2%;
+}
+.middle-content .mid-left {
+  align-items: center;
+  margin-left: 20%;
 }
