--- a/less/global.less
+++ b/less/global.less
@@ -1,7 +1,7 @@
 body,html{
-    heigh:100%;
+    height:100%;
     margin:0;
-    color: #fff;
+
     
 }
 
@@ -9,4 +9,5 @@ body{
     background: url('../img/wave.svg') no-repeat;
     background-size: cover;
     padding-bottom: 500px;
+    background-size: 200%;
 }
