--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,9 @@
 body {
   background-color: #fff;
 }
+.special {
+  color: #f29148;
+}
 .navbar {
   display: flex;
   flex-direction: row;
@@ -69,7 +72,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  line-height: 1.6;
   margin-left: 100px;
   margin-right: 100px;
 }
@@ -104,8 +106,63 @@ body {
   width: 100%;
   border-radius: 10px;
 }
-.container .card .special {
-  color: #f29148;
+.container .card p {
+  line-height: 1.6;
+}
+.about-content {
+  display: flex;
+  flex-direction: column;
+  margin: 50px 0;
+}
+.about-content .sec {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: flex-start;
+  width: 100%;
+  margin: 50px 0;
+}
+@media (max-width: 900px) {
+  .about-content .sec {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.about-content .sec .about-text {
+  width: 45%;
+}
+@media (max-width: 900px) {
+  .about-content .sec .about-text {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 25px;
+  }
+}
+.about-content .sec .two {
+  text-align: right;
+}
+@media (max-width: 900px) {
+  .about-content .sec .two {
+    text-align: center;
+  }
+}
+@media (max-width: 900px) {
+  .about-content .second {
+    flex-direction: column-reverse !important;
+  }
+}
+.about-content img {
+  width: 45%;
+  height: 100%;
+}
+@media (max-width: 900px) {
+  .about-content img {
+    width: 100%;
+  }
+}
+.about-content p {
+  line-height: 1.6;
 }
 footer {
   background-color: #141c25;
