--- a/less/home-page.less
+++ b/less/home-page.less
@@ -35,6 +35,7 @@ body{
 display: flex;
 justify-content: space-between;
 margin-top: 5%;
+margin-bottom: 10%;
 .mid-right{
 margin-right: 2%;
 }
@@ -44,3 +45,34 @@ margin-right: 2%;
 }
 
 }
+
+.bottom-picture{
+    height: 5%;
+    width: 40%;
+}
+
+.bottom-content{
+    
+    .main-bottom-text{
+            background-color: @main-orange;
+          display: flex;
+          align-items: center;
+        img{
+            height: 50%;
+            width: 60%;
+            margin-left: 40%;
+         
+        }
+        p, h2{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+           
+            
+        }
+       
+    }
+
+
+}
+
