--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,12 @@
 body,
 html {
-  height: 100%;
   margin: 0;
 }
 body {
   background: url('../img/wave.svg') no-repeat;
   background-size: cover;
-  padding-bottom: 500px;
   background-size: 200%;
+  height: 100%;
 }
 .nav-div img {
   width: 15%;
@@ -51,8 +50,11 @@ header button {
 body .middle-picture {
   display: flex;
   justify-content: center;
-  height: 70%;
   padding-top: 5%;
+}
+body .middle-picture .middle-picture2 {
+  width: 15%;
+  height: auto;
 }
 .middle-content {
   display: flex;
@@ -75,6 +77,7 @@ body .middle-picture {
   background-color: #f29148;
   display: flex;
   align-items: center;
+  margin-bottom: 1%;
 }
 .bottom-content .main-bottom-text img {
   height: 50%;
@@ -86,4 +89,23 @@ body .middle-picture {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+#boxes {
+  margin-top: 10%;
+}
+#boxes .box {
+  float: left;
+  text-align: center;
+  width: 30%;
+  padding: 10px;
+}
+#boxes .box img {
+  width: 30%;
+}
+footer {
+  padding: 20px;
+  margin-top: 30%;
+  color: #ffffff;
+  background-color: #141C25;
+  text-align: center;
 }
