--- a/less/home-page.less
+++ b/less/home-page.less
@@ -26,8 +26,13 @@ body{
     .middle-picture{
         display: flex;
         justify-content: center;
-        height:70%;
-        padding-top: 5%;
+          padding-top: 5%;
+
+         .middle-picture2{
+            width: 15%;
+            height: auto;
+           
+         }
     }
 }
 
@@ -57,6 +62,7 @@ margin-right: 2%;
             background-color: @main-orange;
           display: flex;
           align-items: center;
+          margin-bottom: 1%;
         img{
             height: 50%;
             width: 60%;
@@ -76,3 +82,26 @@ margin-right: 2%;
 
 }
 
+#boxes {
+  margin-top: 10%;
+
+.box{
+    float:left;
+    text-align: center;
+    width:30%;
+    padding:10px;
+
+    img{
+        width: 30%;
+    }
+}
+}
+
+footer{
+    padding:20px;
+    margin-top:30%;
+    color:#ffffff;
+  background-color:@main-blue;
+    text-align: center;
+
+}
