--- a/less/home-page.less
+++ b/less/home-page.less
@@ -76,6 +76,9 @@ margin-right: 2%;
 .mid-left{
     align-items: center;
     margin-left: 20%;
+    @media @phone{
+     margin-right: 8%;       
+    }
 }
 
 }
@@ -119,10 +122,16 @@ margin-right: 2%;
     text-align: center;
     width:30%;
     padding:10px;
+    @media @phone {
+        width: 29%;
+    }
+    
 
     img{
         width: 30%;
+        
     }
+    
 }
 }
 
@@ -132,5 +141,14 @@ footer{
     color:#ffffff;
   background-color:@main-blue;
     text-align: center;
+    @media @phone {
+        margin-top: 73%;
+    }
+    
 
 }
+
+
+
+
+
