--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,11 @@ html {
   display: flex;
   align-items: center;
 }
+@media (max-width:500px) {
+  .nav-div .navbar .nav-links {
+    display: block;
+  }
+}
 .nav-div .navbar .nav-links li {
   margin-right: auto;
 }
@@ -85,6 +90,11 @@ body .middle-picture .middle-picture2 {
   align-items: center;
   margin-left: 20%;
 }
+@media (max-width:500px) {
+  .middle-content .mid-left {
+    margin-right: 8%;
+  }
+}
 .bottom-picture {
   height: 5%;
   width: 40%;
@@ -115,6 +125,11 @@ body .middle-picture .middle-picture2 {
   width: 30%;
   padding: 10px;
 }
+@media (max-width:500px) {
+  #boxes .box {
+    width: 29%;
+  }
+}
 #boxes .box img {
   width: 30%;
 }
@@ -124,6 +139,11 @@ footer {
   color: #ffffff;
   background-color: #141C25;
   text-align: center;
+}
+@media (max-width:500px) {
+  footer {
+    margin-top: 73%;
+  }
 }
 .contact-container {
   background-color: #141C25;
@@ -168,6 +188,12 @@ textarea {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+@media (max-width:500px) {
+  input,
+  textarea {
+    width: 450px;
+  }
 }
 input:focus,
 textarea:focus {
@@ -216,6 +242,16 @@ label {
   justify-content: center;
   align-items: center;
 }
+@media (max-width:500px) {
+  .contact-main {
+    flex-direction: column;
+  }
+}
 .contact-main .contact-img {
   width: 40%;
+}
+@media (max-width:500px) {
+  .contact-main .contact-img {
+    width: 50%;
+  }
 }
