--- a/less/navigation.less
+++ b/less/navigation.less
@@ -16,6 +16,10 @@
                 list-style-type: none; 
                 display: flex;
                 align-items: center;    
+                @media @phone{
+                  display: block;
+                }
+               
                 li{
                     margin-right: auto;
                 }
@@ -25,18 +29,14 @@
                 color: #fff;
                 justify-content: center;
                 
+                
                 &:hover{
                     color: @main-orange;
                 }
             }
             
-            .nav-item{
-               // padding: 10px 0px;
-               // margin: 0 0 0px 20px;
-           
-                
-                
-            }
-
+            
         }
     }
+
+  
