--- a/less/styles.less
+++ b/less/styles.less
@@ -76,6 +76,10 @@ body {
             margin-left: 10px;
             margin-right: 10px;
         }
+
+        &:hover {
+            color: @secondary-color;
+        }
     }
 }
 
