--- a/css/index.css
+++ b/css/index.css
@@ -145,6 +145,60 @@ footer {
     margin-top: 73%;
   }
 }
+.navbar2 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #141c25;
+  padding: 20px 0;
+}
+@media (max-width: 900px) {
+  .navbar2 {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.navbar2 img {
+  width: 90px;
+  margin-left: 100px;
+  margin-right: 0px;
+}
+@media (max-width: 900px) {
+  .navbar2 img {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+.navbar2 nav {
+  margin-left: 0px;
+  margin-right: 100px;
+}
+@media (max-width: 900px) {
+  .navbar2 nav {
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 30px;
+  }
+}
+.navbar2 a {
+  color: #fff;
+  text-decoration: none;
+  margin-left: 30px;
+}
+@media (max-width: 900px) {
+  .navbar2 a {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+}
+@media (max-width: 700px) {
+  .navbar2 a {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
 .contact-container {
   background-color: #141C25;
   margin-bottom: 5%;
