--- a/less/global.less
+++ b/less/global.less
@@ -4,10 +4,15 @@ body,html{
 
     
 }
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
-body{
-    
+* {
+    font-family: 'Open Sans', sans-serif;
+}
+p {
+    line-height: 1.6;
+}
 
-    
-    
+h1 {
+    font-size: 2.5rem;
 }
