--- a/less/navigation.less
+++ b/less/navigation.less
@@ -39,4 +39,54 @@
         }
     }
 
-  
+  // Navbar 
+.navbar2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: @nav-footer-color;
+    padding: @nav-footer-padding;
+
+    @media @md-laptop {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    img {
+        width: 90px;
+        .overall-container(100px, 0px);
+
+        @media @md-laptop {
+            .overall-container(0, 0)
+        }
+    }
+
+    nav {
+        .overall-container(0px, 100px);
+
+        @media @md-laptop {
+            .overall-container(0, 0);
+            margin-top: 30px;
+        }
+    }
+
+    a {
+        color: #fff;
+        text-decoration: none;
+        margin-left: 30px;
+
+        
+
+        @media @md-laptop {
+            margin-left: 30px;
+            margin-right: 30px;
+        }
+
+        @media @mobile {
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+    }
+}
