--- a/less/home-page.less
+++ b/less/home-page.less
@@ -7,11 +7,13 @@ header{
     h1{
 text-align: center;
 padding-top: 5%;
+font-family: 'Open Sans', sans-serif;
 
     }
 
     p{
         text-align: center;
+        font-family: 'Open Sans', sans-serif;
       
     }
     button{
