--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,7 @@ body {
 .about-content img {
   width: 45%;
   height: 100%;
+  border-radius: 10px;
 }
 @media (max-width: 900px) {
   .about-content img {
