--- a/less/styles.less
+++ b/less/styles.less
@@ -177,6 +177,7 @@ body {
     img {
         width: 45%;
         height: 100%;
+        border-radius: 10px;
 
         @media @md-laptop {
             width: 100%;
